Replacing display picture.

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 						<div class="row">
 							<div class="col-md-4">
-								<img src="img/pro_pic.png" alt="avater" class="img-responsive">
+								<img src="img/FullSizeRender.jpg" alt="avater" class="img-responsive">
 							</div><!-- end .col-md-4 -->
 							<div class="col-md-4">
 								<div class="about-info">
