--- a/index.html
+++ b/index.html
@@ -49,18 +49,14 @@
 			<div class="container">
 				<div class="col-md-12">
 
-					<div class="logo"><img src="img/logo.png" class="img-responsive" alt="logo"></div><!-- end .logo -->
 					<div class="info">
 						<h2>BRENDA COSTA</h2>
 						<h3>MARKETING PROFESSIONAL</h3>
 					</div><!-- end .info -->
 
 					<ul class="social">
-				         <li><a class="twitter" href="http://html.metrothemes.me/md-html/md-live/index-2.html#"></a></li>
-				         <!-- <li><a class="facebook" href="http://html.metrothemes.me/md-html/md-live/index-2.html#"></a></li> -->
-				         <!-- <li><a class="dribble" href="http://html.metrothemes.me/md-html/md-live/index-2.html#"></a></li> -->
-				         <!-- <li><a class="vimeo" href="http://html.metrothemes.me/md-html/md-live/index-2.html#"></a></li> -->
-				         <li><a class="linkedin" href="http://html.metrothemes.me/md-html/md-live/index-2.html#"></a></li>
+				         <li><a class="twitter" href="https://twitter.com/brendach09"></a></li>
+				         <li><a class="linkedin" href="https://www.linkedin.com/in/brendacosta/en"></a></li>
 				         <!-- <li><a class="github" href="http://html.metrothemes.me/md-html/md-live/index-2.html#"></a></li> -->
 				         <li><a class="google" href="http://html.metrothemes.me/md-html/md-live/index-2.html#"></a></li>
 				        <!--  <li><a class="behance" href="#"></a></li>
