added  sample pdf resume

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 										<p>: 121 king street Melbourne VIC<br>  3000, Austraila</p>
 									</div><!-- end .info-details -->					
 									<p class="about-signature">Marshall Doe</p>
-									<a href="http://html.metrothemes.me/md-html/md-live/index-2.html#" class="mt-button large btn"><i class="fa-download"></i><span>Download Resume</span></a>
+									<a href="pdf/resume.pdf" class="mt-button large btn"><i class="fa-download"></i><span>Download Resume</span></a>
 								</div> <!-- end .about-info -->
 							</div> <!-- end .col-md-4 -->
 							<div class="col-md-4">
