Updated hobbies, information & summary

--- a/index.html
+++ b/index.html
@@ -92,11 +92,6 @@
                         <span class="sr-only">Toggle navigation</span>
                         <i class="fa fa-navicon"></i>
                     </button>
-                    <!-- Logo -->
-                    <a href="http://html.metrothemes.me/md-html/md-live/index-2.html#" class="header-logo">
-                        <img src="img/logo-2.png" alt="Logo">
-                    </a> 
-                    <!-- Logo -->
                 </div><!-- End .navbar-header -->
 
 
@@ -136,10 +131,12 @@
 							<h2>About me</h2>
 							<span class="border"></span>
 								<p>
-									<span>My name is Brenda. I like dogs.</span>
+									<span> Research professional with a deep understanding of Latin American markets..</span>
 								</p>
 								<p>
-									Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa nisl quis neque. 
+									I have a holistic approach involving deep consumer and market understanding in combination with business dynamics to generate strong marketing strategies.  
+
+									Social media and competitive market research are among the most notable traits. I am a strong communicator, negotiator, strategic planner and problem solver.  I am quick to learn and apply new professional skill sets in fast-paced environments. 
 								</p>							
 						</div><!-- end .section-title -->
 
@@ -151,19 +148,17 @@
 								<div class="about-info">
 									<div class="info-title">
 										<p>Birthdate</p>
-										<p>Phone</p>
 										<p>Email</p>
 										<p>website</p>
 										<p>Address</p>
 									</div> <!-- end .info-title -->
 									<div class="info-details">
-										<p>: 21-02-1992</p>
-										<p>: +6198704563</p>
-										<p>: hello@mashaldoe.com</p>
-										<p>: www.marshaldoe.com</p>
-										<p>: 121 king street Melbourne VIC<br>  3000, Austraila</p>
+										<p>: 03-05-1990</p>
+										<p>: brendach09@gmail.com</p>
+										<p>: www.brendacosta.com</p>
+										<p>: Seattle, WA </p>
 									</div><!-- end .info-details -->					
-									<p class="about-signature">Marshall Doe</p>
+									<p class="about-signature">Brenda Costa</p>
 									<a href="pdf/resume.pdf" class="mt-button large btn"><i class="fa-download"></i><span>Download Resume</span></a>
 								</div> <!-- end .about-info -->
 							</div> <!-- end .col-md-4 -->
@@ -173,29 +168,32 @@
 									<div class="about-extra-icon-style2">
 										<ul>
 											<li>
-												<p><i class="fa-gamepad"></i><br><span>Games</span></p>
+												<p><i class="fa fa-apple"></i><br><span>Brands</span></p>
 											</li>
 											<li>
-												<p><i class="fa-headphones"></i><br><span>Music</span></p>
+												<p><i class="fa fa-laptop"></i><br><span>Technol</span></p>
+											</li>
+											<li>
+												<p><i class="fa fa-globe"></i><br><span>Physics</span></p>
 											</li>
 											<li>
 												<p><i class="fa-plane"></i><br><span>Travel</span></p>
 											</li>
 											<li>
-												<p><i class="fa-apple2"></i><br><span>Mac OS</span></p>
+												<p><i class="fa fa-book"></i><br><span>Books</span></p>	
 											</li>
 											<li>
-												<p><i class="fa-video-camera"></i><br><span>Cinema</span></p>	
+												<p><i class="fa fa-puzzle-piece"></i><br><span>Games</span></p>
 											</li>
 											<li>
-												<p><i class="fa-coffee"></i><br><span>Coffee</span></p>
+												<p><i class="fa fa-video-camera"></i><br><span>Cinema</span></p>
 											</li>
 											<li>
-												<p><i class="fa-truck"></i><br><span>Cars</span></p>
+												<p><i class="fa fa-trophy"></i><br><span>Sports</span></p>
 											</li>
 											<li>
-												<p><i class="fa-money"></i><br><span>Money</span></p>
-											</li>											
+												<p><i class="fa-headphones"></i><br><span>Music</span></p>
+											</li>									
 										</ul>
 									</div> <!-- end .about-extra-icon -->
 								</div><!-- end .about-extra -->				
