Updated education and jobs

--- a/index.html
+++ b/index.html
@@ -248,13 +248,21 @@
 											<div class="timeline-post-content-holder">
 												<div class="timeline-post-icon"></div>
 												<div class="timeline-post-title">
-													<h4>SENIOR DEVELOPER</h4>
+													<h4>RESEARCH PROJECT MANAGER</h4>
 												</div>
 												<div class="timeline-post-subtitle">
-													<p><span>Company Name </span><span class="timeline-duration">2012 - Current</span></p>
+													<p><span>HG Marketing </span><span class="timeline-duration">2014 - 2015</span></p>
 												</div>
 												<div class="timeline-post-content">
-													<p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</p>
+													<p>
+														Established and managed a Mexican Marketing Research firm in United States and forged strategic business partnerships and alliances to get in to the American market.
+													</p>
+													<p>
+														Conducted in-depth qualitative and quantitative research to guide clients to take informed decisions that drive them to successful projects.
+													</p>
+													<p>
+														Conceptualized and implemented new web page and online marketing strategies to increase awareness and build interest.
+													</p>
 												</div>
 											</div> <!-- /.timeline-post-content-holder end -->							
 										</div> <!-- /.timeline-post end -->
@@ -262,13 +270,18 @@
 											<div class="timeline-post-content-holder">
 												<div class="timeline-post-icon"></div>
 												<div class="timeline-post-title">
-													<h4>SENIOR DEVELOPER</h4>
+													<h4>MARKETING INTERN</h4>
 												</div>
 												<div class="timeline-post-subtitle">
-													<p><span>Company Name </span><span class="timeline-duration">2012 - Current</span></p>
+													<p><span>Todays Concept</span><span class="timeline-duration">2013 - 2014 </span></p>
 												</div>
 												<div class="timeline-post-content">
-													<p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</p>
+													<p> 
+													Evaluate market trends and price of goods and supplies in the market.Networking and negotiating with Suppliers for competitive prices.
+													</p>
+													<p>
+													Research new markets and determined new market channels and startegies.
+													</p>
 												</div>
 											</div> <!-- /.timeline-post-content-holder end -->							
 										</div> <!-- /.timeline-post end -->									
@@ -278,13 +291,30 @@
 											<div class="timeline-post-content-holder">
 												<div class="timeline-post-icon"></div>
 												<div class="timeline-post-title">
-													<h4>SENIOR DEVELOPER</h4>
+													<h4>RESEARCH ANALYST</h4>
 												</div>
 												<div class="timeline-post-subtitle">
-													<p><span>Company Name </span><span class="timeline-duration">2012 - Current</span></p>
+													<p><span>Crestwood Market Research Inc.</span><span class="timeline-duration">2015 - Current</span></p>
 												</div>
 												<div class="timeline-post-content">
-													<p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</p>
+														<p>
+															Conduct market, business, and economic analyses and report findings with conclusions and actionable recommendations for clients.
+														</p>
+														<p>
+															Design and conduct both qualitative and quantitative market research surveys.
+														</p>
+														<p>
+															Collect and analyze data on customer demographics, psychographics, preferences, needs, and buying habits to identify factors affecting behavior.  
+														</p>
+														<p>
+															Development of research designs, sampling plans, questionnaires, tab and banner plans and analytical plans. 
+														</p>
+														<p>
+															Oversee the implementation of survey research and other related projects within established timelines and budgets.   Manage subcontractors, as necessary.
+														</p>
+														<p>
+															Merge, structure, and analyze large data and rudimentary statistical analysis using SPSS and WinCross. 
+														</p>
 												</div>
 											</div> <!-- /.timeline-post-content-holder end -->							
 										</div> <!-- /.timeline-post end -->
@@ -292,13 +322,24 @@
 											<div class="timeline-post-content-holder">
 												<div class="timeline-post-icon"></div>
 												<div class="timeline-post-title">
-													<h4>SENIOR DEVELOPER</h4>
+													<h4>MARKET RESEARCH ANALYST</h4>
 												</div>
 												<div class="timeline-post-subtitle">
-													<p><span>Company Name </span><span class="timeline-duration">2012 - Current</span></p>
+													<p><span> Freelance </span><span class="timeline-duration">2010 - 2012</span></p>
 												</div>
 												<div class="timeline-post-content">
-													<p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</p>
+													<p>
+													Identification of key success factors and positioning for presidential elections of 2012.
+													</p>
+													<p>
+													Feasibility study and determination of market size in units and value for advertising agency BTL.
+													</p>
+													<p>
+													Descriptive research on household income in the city of Querétaro, Mexico.
+													</p>
+													<p>
+													Study location of Papa John's pizza.
+													</p>
 												</div>
 											</div> <!-- /.timeline-post-content-holder end -->							
 										</div> <!-- /.timeline-post end -->
@@ -318,13 +359,12 @@
 											<div class="timeline-post-content-holder">
 												<div class="timeline-post-icon"></div>
 												<div class="timeline-post-title">
-													<h4>Phd Computer Science</h4>
+													<h4>Mondragon-UCO</h4>
 												</div>
 												<div class="timeline-post-subtitle">
-													<p><span>Company Name </span><span class="timeline-duration">2012 - Current</span></p>
+													<p><span> Bachelors=; Marketing; </span><span class="timeline-duration">2009 - 2012 </span></p>
 												</div>
 												<div class="timeline-post-content">
-													<p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</p>
 												</div>
 											</div> <!-- /.timeline-post-content-holder end -->							
 										</div> <!-- /.timeline-post end -->	
@@ -334,13 +374,12 @@
 											<div class="timeline-post-content-holder">
 												<div class="timeline-post-icon"></div>
 												<div class="timeline-post-title">
-													<h4>University</h4>
+													<h4>The University of Georgia</h4>
 												</div>
 												<div class="timeline-post-subtitle">
-													<p><span>Company Name </span><span class="timeline-duration">2012 - Current</span></p>
+													<p><span>Marketing Research Certification </span><span class="timeline-duration">2013 - 2014</span></p>
 												</div>
 												<div class="timeline-post-content">
-													<p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</p>
 												</div>
 											</div> <!-- /.timeline-post-content-holder end -->							
 										</div> <!-- /.timeline-post end -->
@@ -351,10 +390,9 @@
 													<h4>High School</h4>
 												</div>
 												<div class="timeline-post-subtitle">
-													<p><span>Company Name </span><span class="timeline-duration">2012 - Current</span></p>
+													<p><span>Nuevo Continente </span><span class="timeline-duration">2006 - 2009</span></p>
 												</div>
 												<div class="timeline-post-content">
-													<p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</p>
 												</div>
 											</div> <!-- /.timeline-post-content-holder end -->							
 										</div> <!-- /.timeline-post end -->
