Updated my services

--- a/index.html
+++ b/index.html
@@ -423,24 +423,26 @@
 							<div class="col-md-6 left-service">
 
 								<div class="service-box">
-									<i class="service-icon fa-leaf"></i>
+									<i class="service-icon fa fa-search"></i>
 									<div class="service-content">
-										<h3>Designing</h3>
+										<h3>Market Research & Analysis</h3>
 										<p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a</p>
 									</div>
 								</div><!-- end .service-box -->
 								<div class="service-box">
-									<i class="service-icon fa-magic"></i>
+									<i class="service-icon fa fa-lightbulb-o"></i>
 									<div class="service-content">
-										<h3>Branding</h3>
+										<h3>Market Strategy</h3>
 										<p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a</p>
 									</div>
 								</div><!-- end .service-box -->
 								<div class="service-box">
-									<i class="service-icon fa-bar-chart-o"></i>
+									<i class="service-icon fa-globe"></i>
 									<div class="service-content">
-										<h3>Analytics</h3>
-										<p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a</p>
+										<h3>Multicultural Reseach</h3>
+										<p>
+										Understanding of culture and diversity in the marketplace and focusing on constant learning about the ever-changing Hispanic population. How these market segments and subsegments understand, use and approach products and services is my main focus in multicultural markets.
+										</p>
 									</div>
 								</div><!-- end .service-box -->
 							</div><!-- end .col-md-6 .left-service -->	
@@ -448,23 +450,23 @@
 							<div class="col-md-6 right-service">
 
 								<div class="service-box">
-									<i class="service-icon fa-flask"></i>
+									<i class="service-icon fa-bar-chart-o"></i>
 									<div class="service-content">
-										<h3>Developing</h3>
+										<h3>Data Tabulation</h3>
+										<p>Arranging the data in different classes in order to give you a definite form and a coherent structure of the data collected, facilitating their use in the most systematic and effective manners.<p>
+									</div>
+								</div><!-- end .service-box -->
+								<div class="service-box">
+									<i class="service-icon fa fa-pencil-square-o"></i>
+									<div class="service-content">
+										<h3>Questionnaire development</h3>
 										<p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a</p>
 									</div>
 								</div><!-- end .service-box -->
 								<div class="service-box">
-									<i class="service-icon fa-globe"></i>
+									<i class="service-icon fa fa-desktop"></i>
 									<div class="service-content">
-										<h3>Marketing</h3>
-										<p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a</p>
-									</div>
-								</div><!-- end .service-box -->
-								<div class="service-box">
-									<i class="service-icon fa-anchor"></i>
-									<div class="service-content">
-										<h3>Support</h3>
+										<h3>Online survey programming</h3>
 										<p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a</p>
 									</div>
 								</div><!-- end .service-box -->
@@ -563,7 +565,7 @@
   			<div class="container">		
   				<div class="row">
   					<div class="col-md-12">
-					    <h1>I Love To Design &amp; Develop</h1>
+					    <h1> Marketing without data is like driving with you eyes closed</h1>
 
 					    <a href="http://html.metrothemes.me/md-html/md-live/index-2.html#contact" class="mt-button large hire-btn">Hire Me Now</a>
   					</div><!-- end .col-md-12 -->
@@ -645,9 +647,10 @@
   		<div class="parallax-overlay-2"> 
   			<div class="container">
 					<div class="col-md-12">
-					    <h1>"It’s art if it can’t be explained. It’s fashion if no one asks for an explanation. It’s design if it doesn’t need explanation."</h1>
+					    <h1>"You can have data without information, but cannot have information without data"
+					    </h1>
 
-					    <p>-Wouter Stokkel</p>
+					    <p>-Daniel Keys Moran</p>
   					</div><!-- end .col-md-12 -->  				
   			</div><!-- end .container --> 
   		</div><!-- end .parallax-overlay-2 -->
@@ -668,9 +671,9 @@
 							<div class="col-md-6">
 								<h2>LET'S GET IN TOUCH</h2>
 								<ul class="get_in">
-									<li><i class="fa fa-envelope-o"></i><p>hello@metrothemes.me</p></li>
-									<li><i class="fa fa-phone"></i><p>+0123 456 789</p></li>				
-									<li><i class="fa fa-map-marker"></i><p>21 Cool Street, Melbourne Victoria 3000 Australia</p></li>
+									<li><i class="fa fa-envelope-o"></i><p>brendach09@gmail.com</p></li>
+									<li><i class="fa fa-phone"></i><p>(206) 458 - 4178</p></li>				
+									<li><i class="fa fa-map-marker"></i><p>Seattle, WA </p></li>
 									<li><a href="http://html.metrothemes.me/md-html/md-live/index-2.html#"><i class="fa fa-cloud-download"></i><p>Download Vcard</p></a></li>	
 								</ul><!-- end .get_in -->
 							</div><!-- end .col-md-6 -->
