Updated Google+ Icon

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				         <li><a class="twitter" href="https://twitter.com/brendach09"></a></li>
 				         <li><a class="linkedin" href="https://www.linkedin.com/in/brendacosta/en"></a></li>
 				         <!-- <li><a class="github" href="http://html.metrothemes.me/md-html/md-live/index-2.html#"></a></li> -->
-				         <li><a class="google" href="http://html.metrothemes.me/md-html/md-live/index-2.html#"></a></li>
+				         <li><a class="google" href="https://plus.google.com/u/0/104301417240374625482"></a></li>
 				        <!--  <li><a class="behance" href="#"></a></li>
 				         <li><a class="forrst" href="#"></a></li>
 				         <li><a class="lastfm" href="#"></a></li> -->
