--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				        <li class=""><a href="http://html.metrothemes.me/md-html/md-live/index-2.html#about" class="colapse-menu1">About</a></li>
 				        <li class=""><a href="http://html.metrothemes.me/md-html/md-live/index-2.html#resume" class="colapse-menu1">Resume</a></li>
 				        <li class=""><a href="http://html.metrothemes.me/md-html/md-live/index-2.html#service" class="colapse-menu1">Service</a></li>
-				        <li class=""><a href="http://html.metrothemes.me/md-html/md-live/index-2.html#skills" class="colapse-menu1">Skills/a></li> 
+				        <li class=""><a href="http://html.metrothemes.me/md-html/md-live/index-2.html#skills" class="colapse-menu1">Skills</a></li> 
 				        <li class=""><a href="http://facebook.com/bc.marketing.research" class="colapse-menu1">Blog</a></li>
 				        <li class=""><a href="http://html.metrothemes.me/md-html/md-live/index-2.html#contact" class="colapse-menu1">Contact</a></li>
                     </ul>
